--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -81,3 +81,13 @@ display: none;
   font-weight: bold;
   cursor: pointer;
 }
+.add-card-btn:hover{
+  color:black;
+text-decoration: none;
+}
+.add-card-btn{
+  font-weight: 400;
+  font-size: large;
+  color:black;
+  cursor: pointer;
+}
