--- a/src/component/hub/workspace/viewWorkspace/viewWorkspacelist/viewWorkspacelist.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspacelist/viewWorkspacelist.css
@@ -14,6 +14,11 @@
    
      
 }
+.close_remove{
+   background-color:  #F5F5F5;
+   
+  
+}
 
 .delete{
     cursor: pointer;
@@ -49,13 +54,20 @@
 {
     width: 67vw;
 }
-.header{
-    background-color: #6DD41F 0%, #409500 100% ;
-    height: 13px;
+.headerRemove{
+    background-color:  #409500 ;
+   height: 10px;
+
+}
+.close_toast{
+    background-color: #F5F5F5;
+    width: 18vw;
+   
 }
 .close {
    display: none;
 }
+
 
 
 
