--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -24,6 +24,8 @@ font-size: small;
 
 
 
+
+
 .okEditWorkspace{
    width: 35px;
    height: 20px;
@@ -127,5 +129,7 @@ opacity: 0.9;
 }
    
 
-
-
+/*  */
+.iconsAction{
+   display: none;
+}
