--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -24,6 +24,8 @@ font-size: small;
 
 
 
+
+
 .okEditWorkspace{
    width: 35px;
    height: 20px;
@@ -83,26 +85,25 @@ font-size: small;
        width: 29vw
 }
 .Undo{
-   color: #409500;
-text-align: center;
+   color: var(--unnamed-color-2bb4fb);
+text-align: left;
+font: normal normal medium 20px/26px Roboto;
+letter-spacing: 0.36px;
 background-color:  #F5F5F5 ;
-margin: 0px 100px;
-
+cursor: pointer;
+border: 1px solid;
+color: #2BB4FB;
 border-radius:20px ;
 font-weight: 620;
 cursor: pointer;
+text-align: center;
 
+text-transform: capitalize;
+opacity: 0.9;
 }
 .remove:focus{
    border: none;
    border-bottom: none;
-}
-.toast_delete{
-   background-color:  #F5F5F5 ;
-   height: 13vh;
-   width: 22vw;
-   text-align: center;
-
 }
 
 
@@ -128,5 +129,7 @@ cursor: pointer;
 }
    
 
-
-
+/*  */
+.iconsAction{
+   display: none;
+}
