--- a/src/component/hub/workspace/editWorkspace/editWorkspace.css
+++ b/src/component/hub/workspace/editWorkspace/editWorkspace.css
@@ -13,17 +13,15 @@
     outline:none;
    
   } 
-     .edit_workspace_color:focus {
-    outline:none;
-   
-  } 
+  
   .edit_workspace_color{
         background-color: white;
     color:black;
     border:none;
-    border-bottom: 1px solid #8181A5;
-    width: 15vw;
-    margin: 0px -50px;
+    border-bottom: none;
+    width: 5vw;
+    margin: 0px -60px;
+   
 
   }
   .close_edit{
