--- a/src/component/hub/SelectHeader/selectHeader.css
+++ b/src/component/hub/SelectHeader/selectHeader.css
@@ -48,7 +48,7 @@ line-height: 0.95 !important;
         /* font-size: small !important; */
 }
 .s-header svg{
-        margin-right: 30px !important;
+        /* margin-right: 30px !important; */
 }
 
 
