add task with name and change format date

--- a/src/component/hub/projectPlatform/projectsList/projectsList.css
+++ b/src/component/hub/projectPlatform/projectsList/projectsList.css
@@ -9,9 +9,9 @@
 }
 select{
     
-    border: none!important;
+    /* border: none!important;
     color: #FF65A6;
-    background-color: transparent!important;
+    background-color: transparent!important; */
 
 }
 
