--- a/src/component/hub/dropDownWorkspace/dropDownWorkspace.css
+++ b/src/component/hub/dropDownWorkspace/dropDownWorkspace.css
@@ -5,18 +5,11 @@
     border-radius: 6px;
     
 }
-select{
-    border: none!important;
-    color: #FF65A6;
 
-}
-select:focus{
-    outline: none;
-}
-option{
+/* option{
     border: none !important;
     color: #FF65A6;
-}
+} */
 a{
     /* color: #98A9BC; */
     display: inline-block;
