--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -5,6 +5,10 @@
     border-radius: 12px;
     opacity: 1;  
   }
+  .cards{
+    height: 65vh;
+    overflow-y: auto;
+  }
   .logoW{
     margin-top: 3vh !important;
     margin-left: 5vh !important;
@@ -45,7 +49,6 @@
 
   .add-new-btn:hover:first-letter {
     margin-bottom: 1.5vh;
-    /* transform: rotate(45deg);  */
     margin-left:0.85vw;
 
     
