--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -28,9 +28,7 @@
 p{
     /* font-size: medium; */
     /* background-color: teal; */
-    color:#98A9BC;
-    /* padding-left: 6vw; */
-    /* bottom:0; */
+    color:#98A9BC !important;
     margin-bottom: 0;
     /* margin-top: 2vh; */
 }
