--- a/src/component/hub/body/body.css
+++ b/src/component/hub/body/body.css
@@ -5,3 +5,11 @@
   overflow: auto;
   overflow-x: hidden;
 }
+.body-workspace{
+  height: 87vh;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border-radius: 12px;
+  opacity: 1;
+  overflow: auto;
+  overflow-x: hidden;
+}
