--- a/src/component/warps/nav/nav.css
+++ b/src/component/warps/nav/nav.css
@@ -1,13 +1,17 @@
 .nav{
-  width: 100%;
-/* height: 7vh; */
-background: #FFFFFF 0% 0% no-repeat padding-box;
+  width: 100%; 
+height: 7vh;
+background: #FFFFFF;
 /* box-shadow: 0px 3px 6px #00000029; */
 opacity: 1;
-/* box-shadow: 0px 3px 6px #0A26B126; */
 }
+
 .nav img {
-  width: 32px;
-  height: 32px;
+  width: 30px;
+  height: 30px;
   cursor: pointer !important;
+ 
+}
+.profile-logo{
+  margin-left: 94vw !important;
 }
