--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,12 @@ body{
   --white: #ffffff;
   --green:#34A38B;
 }
-
+.save_canges_btn{
+  background-color: #44D7B6;
+  color:white;
+  border-radius: 5px;
+  margin: auto;
+}
 
 
 
