--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -17,12 +17,14 @@
 }
 .show-card{
     background-color: transparent;
+    border:none;
 }
 .show-card>div{
     display: inline-block;
 }
 .show-card:focus{
-    outline: 0;
+    border:1px #98A9BC solid;
+    border-radius: 5px;
 }
 p{
     color:#98A9BC !important;
