--- a/src/component/hub/project/viewProject/viewProject.css
+++ b/src/component/hub/project/viewProject/viewProject.css
@@ -39,6 +39,9 @@
     white-space: nowrap;
     transition: width .6s ease;
 }
+.projectForWorkspace{
+    cursor: pointer ;
+}
 .projectForWorkspace:hover{
     background-color: rgba(0,0,0,.075);
 }
