--- a/src/component/warps/configurator/newConfigurator/new_configurator.css
+++ b/src/component/warps/configurator/newConfigurator/new_configurator.css
@@ -18,14 +18,9 @@
     line-height: 2.8; 
   }
   .li-back{
-    /* background: transparent linear-gradient(90deg, #bceff8 0%,
-     #006C8000 100%) 0% 0% no-repeat padding-box;  */
-     /* background: linear-gradient(90deg, #65E8FF 0%, #006C8000 100%) 0% 0% no-repeat padding-box; */
-     /* opacity: 0.18; */
-     background: url('../../../img/Mask-2.png');
+     background: url('../../../img/Mask1.svg');
      border-left:1px solid #40D9ED; 
      /* margin-left: 2vh; */
-
   }
   li:focus{
     background-color:white;
