--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -8,12 +8,21 @@
     border-bottom: 1px  solid #c7c6c6 ;
 
 }
-.triangle{
+.newTriangle{
         width: 0; 
         height: 0; 
+        display: inline-block;
         border-left: 6px solid transparent;
         border-right: 6px solid transparent; 
         border-top: 6px solid black;
+}
+.triangle{
+        width: 0; 
+        height: 0; 
+        display: inline-block;
+        border-top: 6px solid transparent;
+	    border-left: 6px solid #000000;
+	    border-bottom: 6px solid transparent;
 }
 .show-card{
     background-color: transparent;
@@ -47,6 +56,7 @@ p{
 .name-and-triangle{
     display: inline-block !important;
 }
+
 .scroll-container {
     overflow-y: scroll;
     scroll-behavior: smooth;
