--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -63,7 +63,7 @@
   border-width: 5px  5px !important;
 }
 .Dropdown-control{
-  border: 1px solid #98A9BC;
+  border: 1px solid rgba(0,0,0,.125);
   border-radius: 8px !important;
   opacity: 0.8 !important;
 }
