--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -3,16 +3,16 @@
     height:  55vh; /* בינתיים */
     background: transparent linear-gradient(360deg, #55FFCB00 0%, #cdfff2 100%) 0% 0% no-repeat padding-box;
     border-radius: 0px 0px 8px 8px;
-    /* opacity: 0.5; */
     text-align: left;
-letter-spacing: 0px;
-color: #0A102E;
-overflow-y: auto;
+    letter-spacing: 0px;
+    color: #0A102E;
+    overflow-y: auto;
 
    
 }
+
 .view-cards-tabs >.card{
-overflow-x: hidden !important;
+/* overflow-x: hidden !important; */
 }
 .view-cards-tabs .card-header{
     background-color: white !important;
@@ -30,15 +30,15 @@ overflow-x: hidden !important;
 }
 .card-body .add-task-tabs{
     color: #34A38B !important;
-text-align: left;
-font: normal normal normal 18px/24px Rubik;
-opacity: 1 !important;
-cursor: pointer;
+    text-align: left;
+    font: normal normal normal 18px/24px Rubik;
+    opacity: 1 !important;
+    cursor: pointer;
 }
 .task-card{
     background-color: white;
     height: 90px;
-border-radius: 5px;
+    border-radius: 5px;
 }
 .task-card p{
     color:black !important;
