--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -28,8 +28,7 @@ overflow-x: hidden !important;
 .more:focus{
     outline: 0;
 }
-.card-body .add-task-tabs{
-    color: #34A38B !important;
+.card-body .add-task-tabs, .card-body .add-card-tabs{ color: #34A38B !important;
 text-align: left;
 font: normal normal normal 18px/24px Rubik;
 opacity: 1 !important;
