--- a/src/component/hub/tabs/tabs.css
+++ b/src/component/hub/tabs/tabs.css
@@ -1,4 +1,16 @@
 .body{
-    overflow-x: scroll!important;
-    overflow-y:hidden!important;
+    /* overflow-x: scroll!important; */
+    /* overflow-y:hidden!important; */
+ 
+}
+.body >.row{
+/* padding-bottom: 5vh; */
+    overflow-x: auto !important;
+    white-space: nowrap !important;
+    display: block;
+}
+
+.body > .row > .col-3 { 
+    display: inline-block !important
+    ; float: none !important; 
 }
