--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -44,26 +44,27 @@ cursor: pointer;
     font-size: medium;
 }
 /* width */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar */
+ /* {
     width: 5px;
-  }
+  } */
   
   /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+  /* ::-webkit-scrollbar-track { */
+    /* box-shadow: inset 0 0 5px grey; 
     border-radius: 10px;
-  }
+  } */
    
   /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #44D7B6; 
+  /* ::-webkit-scrollbar-thumb { */
+    /* background: #44D7B6; 
     border-radius: 10px;
-  }
+  } */
   
   /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+  /* ::-webkit-scrollbar-thumb:hover {
     background: #44D7B6; 
-  }
+  } */
   .color-task{
     width: 80px;
     height: 6px;
