--- a/src/component/hub/project/newProject/newProject.css
+++ b/src/component/hub/project/newProject/newProject.css
@@ -1,17 +1,16 @@
 
-<<<<<<< HEAD
-    .inputProject{
-=======
-    /* .name{
-
->>>>>>> newDev
-        background-color: white;
+   
+ .inputProject{
+         background-color: white;
         color:black;
         border:none;
         border-bottom: 1px solid #8181A5;
         width: 15vw;
         margin: 0px -50px;
-        } */
+
+ }  
+   
+  
     
        .inputProject:focus {
         outline:none;
