--- a/src/component/warps/configurator/newConfigurator/new_configurator.css
+++ b/src/component/warps/configurator/newConfigurator/new_configurator.css
@@ -2,7 +2,7 @@
   height: 100vh;
   background: #0A102E 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
-  border-radius: 0px 80px 0px 0px;
+  /* border-radius: 0px 80px 0px 0px; */
  
   }
 
@@ -21,7 +21,8 @@
      background: url('../../../img/Mask1.svg');
      border-left:1px solid #40D9ED; 
      /* margin-left: 2vh; */
-  }
+    background-repeat: no-repeat;
+    }
   li:focus{
     background-color:white;
   }
