--- a/src/component/hub/project/viewProject/cell.css
+++ b/src/component/hub/project/viewProject/cell.css
@@ -6,5 +6,6 @@
     letter-spacing: 0px;
     color: #202224;
     opacity: 0.9;
-    font-size: small;
+    /* font-size: small; */
+    font-size: 16px;
 }
