--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -15,6 +15,13 @@ font-size: small;
    margin-right: 1rem;
     
 }
+
+
+.stripeToSavePlace{
+   color:#ffffff00;
+   margin-right: 0.2rem;
+    margin-left: 0.2rem;
+}
 .Workspacegrid:last-child{
 
 }
@@ -139,6 +146,14 @@ font-weight: 400;
 /*  */
 .iconsAction{
    display: none;
+}
+
+.imageIcon{
+   height: 1rem;
+}
+
+.iconsActions{
+   margin-left: 0.5rem;
 }
 .description-and-productionDate >p{
    display: inline-block !important;
