--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -1,3 +1,8 @@
 .task-card{
     cursor: pointer;
 }
+.more {
+    width: 250px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+  }
