--- a/src/component/hub/toastDelete/toastDelete.css
+++ b/src/component/hub/toastDelete/toastDelete.css
@@ -1,14 +1,18 @@
  
 .toast_delete {
-    background-color: #F5F5F5;
-    max-width: 300px;
     padding: 1rem;
-    border-width: 3px;
+    /* border-width: 3px; */
     border-style: solid;
-    border-image: 
-    linear-gradient(91deg, #44D7B6 0%, #329A80 100%)100% 1 1 1;
+    /* border-image: 
+    linear-gradient(91deg, #44D7B6 0%, #329A80 100%)100% 1 1 1; */
     margin-top: -11rem;
     margin-left: 6rem;
+    width: 436px;
+height: 92px;
+background: #F5F5F5 0% 0% no-repeat padding-box;
+box-shadow: 0px 3px 6px #00000029;
+border-radius: 8px;
+opacity: 1;
   }
 
 
