--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -6,11 +6,11 @@
     text-align: left;
     letter-spacing: 0px;
     color: #0A102E;
-    overflow-y: auto; 
+    overflow-y: auto;
+
+   
 }
-.view-cards-tabs >.card{
-/* overflow-x: hidden !important; */
-}
+
 .view-cards-tabs .card-header{
     background-color: white !important;
     font-size: 16px;
@@ -18,7 +18,7 @@
 }
 .more{
     background-color: transparent;
-    /* float: right !important; */
+    float: right !important;
     color:#778ca2;
     /* margin-top: 1px; */
 }
@@ -70,6 +70,7 @@ cursor: pointer;
     /* background-color:#F8B520; */
     border-radius: 4px;
     opacity: 1;
+
 }
 .card-header .form-control, .task-card .form-control
 {
