--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -67,7 +67,7 @@ font-size: small;
    /* text-align: 30px; */
    font-family: 'Roboto', sans-serif;
    font-size: 1.8rem;
-   /* margin-top: 30px; */
+   margin-top:9px;
 }
 /* .close{
    cursor: pointer;
@@ -153,7 +153,10 @@ font-weight: 400;
 }
 
 .iconsActions{
-   margin-left: 0.5rem;
+   text-align: center;
+   width: 7rem;
+   justify-content: center;
+   margin-left: 0.2rem;
 }
 .description-and-productionDate >p{
    display: inline-block !important;
