--- a/src/component/warps/left_nav/left_nav.css
+++ b/src/component/warps/left_nav/left_nav.css
@@ -4,5 +4,6 @@
   background: #FFFFFF 0% 0% no-repeat padding-box;
   /* box-shadow: 0px 3px 6px #00000029; */
   opacity: 1;
-  
+  margin-top: 54px !important;
+
  }
