--- a/src/component/hub/dropDownWorkspace/dropDownWorkspace.css
+++ b/src/component/hub/dropDownWorkspace/dropDownWorkspace.css
@@ -27,7 +27,7 @@ a{
     display: inline-block;
     width: 42px;
     height: 42px;
-    background: #2BB4FB 0% 0% no-repeat padding-box;
+    /* background: #2BB4FB 0% 0% no-repeat padding-box; */
     text-align: center;
     font: normal normal medium 30px/39px Roboto;
     letter-spacing: 1.26px;
