--- a/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
+++ b/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
@@ -47,7 +47,7 @@
     width: 23px;
     background-color: #FFFFFF;
 
-    border: 1px solid var(--lighat-blue);
+    border: 1px solid #34A38B;
     border-radius: 50%;
 
 
