--- a/src/component/warps/configurator/newConfigurator/new_configurator.css
+++ b/src/component/warps/configurator/newConfigurator/new_configurator.css
@@ -2,11 +2,19 @@
   height: 93vh;
     background: #0A102E 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
-  
- 
+  border-radius: 0px 80px 0px 0px;
   }
 .left_nav li{
   color: #FFFFFF;
+}
+.soon{
+color: var(--unnamed-color-ffffff);
+text-align: left;
+letter-spacing: 0px;
+color: #FFFFFF;
+opacity: 1;
+background: transparent linear-gradient(270deg, #44D7B6 0%, #329A80 100%) 0% 0% no-repeat padding-box;
+border-radius: 3px;
 }
   .list_config{
     padding-top: 8vh;
@@ -18,6 +26,9 @@
     cursor: pointer;
     padding-left: 4vh;
     line-height: 2.8; 
+  }
+  li p{
+    line-height: 1.4 !important; 
   }
   .li-back{
      background: url('../../../img/Mask1.svg');
