--- a/src/component/hub/viewDetails/viewDetails.css
+++ b/src/component/hub/viewDetails/viewDetails.css
@@ -1,7 +1,6 @@
 .view-details{
-    background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
-background: white 0% 0% no-repeat padding-box;
-box-shadow: -5px 0px 40px #0000002C;
+background-color: white ;
+/* box-shadow: -5px 0px 40px #0000002C; */
 border-radius: 12px;
 opacity: 1;
 position: absolute;
