--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -26,10 +26,9 @@
     outline: 0;
 }
 .card-body .add-task-tabs, .card-body .add-card-tabs{ color: #34A38B !important;
-text-align: left;
-font: normal normal normal 18px/24px Rubik;
-opacity: 1 !important;
-cursor: pointer;
+  font: normal normal normal 18px/24px Rubik;
+  opacity: 1 !important;
+  cursor: pointer;
 }
 .task-card{
     background-color: white;
@@ -49,21 +48,21 @@ cursor: pointer;
   
   
   /* Track */
-  /* ::-webkit-scrollbar-track { */
-    /* box-shadow: inset 0 0 5px grey; 
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
     border-radius: 10px;
-  } */
+  }
    
   /* Handle */
-  /* ::-webkit-scrollbar-thumb { */
-    /* background: #44D7B6; 
+  ::-webkit-scrollbar-thumb { 
+     background: #44D7B6; 
     border-radius: 10px;
-  } */
+  }
   
   /* Handle on hover */
-  /* ::-webkit-scrollbar-thumb:hover {
+  ::-webkit-scrollbar-thumb:hover {
     background: #44D7B6; 
-  } */
+  }
   .color-task{
     width: 80px;
     height: 6px;
