--- a/src/component/hub/tabs/tabs.css
+++ b/src/component/hub/tabs/tabs.css
@@ -1,17 +1,16 @@
 
-.body >.row{
-/* padding-bottom: 5vh; */
+.wraperr-tabs >.row{
     overflow-x: auto !important;
     white-space: nowrap !important;
     display: block;
 }
 
-.body > .row > .col-3 { 
+.wraperr-tabs > .row > .col-3 { 
     display: inline-block !important
     ; float: none !important; 
 }
 #add-card{
-    /* margin-top: -5vh; */
+    margin-top: -5vh;
 }
 a .add-card-tabs{
     text-align: center !important;
