--- a/src/component/hub/toastDelete/toastDelete.css
+++ b/src/component/hub/toastDelete/toastDelete.css
@@ -6,7 +6,7 @@
    border-image: linear-gradient(91deg, #44D7B6 0%, #329A80 100%)100% 1 1 1 !important; 
     margin-top: -9rem;
     margin-left: 6rem;
-    width: 274px;
+    /* width: 274px; */
     height: 65px;
     background: #F5F5F5 0% 0% no-repeat padding-box!important;
     background-color:#FFFFFF !important ;
