--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,13 @@ margin-top: 20vh;}
   letter-spacing: 0.32px;
   color: #75798E;
   text-transform: capitalize;
-  margin-bottom: 0px !important;
+  margin-bottom: 0.2rem !important;
   opacity: 0.9;}
 
 
+/* .details .form-control {
+  height:calc(1.5em + .75rem ) !important;
+} */
 
 
  
