--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -57,7 +57,7 @@ font-size: small;
    margin: auto ;
    margin-top: 2.2vh;
 }
-.logo{
+.logo-w{
       width: 2.6rem;
     height:2.6rem;
    border-radius: 50%;
