--- a/src/component/warps/configurator/newConfigurator/new_configurator.css
+++ b/src/component/warps/configurator/newConfigurator/new_configurator.css
@@ -1,6 +1,6 @@
 .left_nav{
   /* height: calc(100%-55px); */
-  height: 100vh;
+  /* height: 100vh; */
     background: #0A102E 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
   
@@ -35,6 +35,8 @@ border-radius: 3px;
   .li-back{
      background: url('../../../img/Mask1.svg');
      border-left:1px solid #40D9ED; 
+     left:2.5vh !important ;
+
      /* margin-left: 2vh; */
   }
   li:focus{
