--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -2,12 +2,12 @@
     text-align: left !important;
 }
 .menu__{
-    max-height: 107px;
+    max-height: 115px;
     background-color: white;
     overflow-y: auto;
 }
 .status-btn{
-    margin-top: 110px;
+    margin-top: 55px;
 }
 .create-label{
     margin-top: 1vh;
@@ -54,4 +54,22 @@ textarea:focus{
 z-index: 9999 !important;  }
 .task-details .status-btn .save_canges_btn{
     z-index: 99999 !important;
+}
+.color-status-first{
+    width: 26px;
+height: 10px;
+background: var(--unnamed-color-f13b7f) 0% 0% no-repeat padding-box;
+background: #F13B7F 0% 0% no-repeat padding-box;
+border-radius: 5px;
+opacity: 1;
+/* margin-top:1.5vh; */
+/* vertical-align: middle; */
+/* display: inline; */
+}
+.placehlder-first-status{
+    display: inline-block;
+}
+.placehlder-first-status span{
+    margin-left: 29px;
+    /* margin-bottom: 1.5vh; */
 }
