--- a/src/component/warps/left_nav/left_nav.css
+++ b/src/component/warps/left_nav/left_nav.css
@@ -1,10 +1,10 @@
 .left_nav{
   /* width: 90px; */
-  height: 100%;
+  height: 95vh;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   /* box-shadow: 0px 3px 6px #00000029; */
+  border-radius: 0px 80px 0px 0px;
   opacity: 1;
   margin-top: 31px !important;
-  border-radius: 0px 80px 0px 0px;
 
  }
