--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -2,9 +2,14 @@
     text-align: left !important;
 }
 .menu__{
-    max-height: 115px;
+    max-height: 120px;
     background-color: white;
     overflow-y: auto;
+width: 140%;
+box-shadow: 0px 0px 10px #00000034;
+}
+.d-status{
+    /* display: inline-block; */
 }
 .status-btn{
     margin-top: 55px;
