--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -35,6 +35,7 @@
 }
 .title-card{
     display: inline !important;
+    /* background-color: #E8EAEC; */
 }
 .show-card>div{
     display: inline-block;
