--- a/src/component/hub/hub.css
+++ b/src/component/hub/hub.css
@@ -10,3 +10,9 @@ margin-left: 8vh;
 .back-screen{
     background-color: #E8EAEC !important;
 }
+
+#cdggdfdfb{
+    margin-top: 100px;
+    margin-left: 400px;
+}
+
