--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -2,11 +2,15 @@
     text-align: left !important;
 }
 .menu__{
-    max-height: 120px;
+   
     background-color: white;
-    overflow-y: auto;
-width: 140%;
+    width: 140%;
 box-shadow: 0px 0px 10px #00000034;
+}
+.status-list{
+    margin-top: 1vh;
+    max-height: 109px;
+    overflow-y: auto;
 }
 .d-status{
     /* display: inline-block; */
@@ -75,9 +79,10 @@ opacity: 1;
 /* display: inline; */
 }
 .placehlder-first-status{
-    display: inline-block;
+    /* display: inline-block; */
 }
 .placehlder-first-status span{
     margin-left: 29px;
+    
     /* margin-bottom: 1.5vh; */
 }
