--- a/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
+++ b/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
@@ -32,9 +32,10 @@ margin-right: 11px;
 }
 
 #iconSearchProject{
-    right: 175px;
-    position: fixed;
-    top: 164px;
+    /* right: 175px; */
+    /* position: fixed; */
+    /* top: 164px; */
+    /* margin-right: -40px; */
 }
 
 
@@ -46,15 +47,20 @@ margin-right: 11px;
     height: 40px;
     border: 0px;
     outline: none;
-    margin-right: -231px;
+    /* margin-right: -231px; */
     border-top-right-radius: 50rem !important;
     border-bottom-right-radius: 50rem !important;
     transition: width 2s;
     width: 42px;
+    margin-right: -42px;
+    margin-right: 10px;
     /* width: 400px; */
-    position: fixed;
-    right: 405px;
-    top: 164px;
+    /* position: fixed; */
+    /* right: 405px; */
+    /* top: 164px; */
+
+    background: url(../../../img/imge_search.png) no-repeat #54ccb647 ;
+/* padding-left:30px; */
 
 }
 
