--- a/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
+++ b/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
@@ -54,12 +54,9 @@ margin-right: 11px;
     width: 42px;
     margin-right: -42px;
     margin-right: 10px;
-    /* width: 400px; */
-    /* position: fixed; */
-    /* right: 405px; */
-    /* top: 164px; */
-
     background: url(../../../img/imge_search.png) no-repeat #54ccb647 ;
+    background-position: right;
+
 /* padding-left:30px; */
 
 }
