--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -28,6 +28,10 @@
         border-left: 6px solid #000000;
         border-bottom: 6px solid transparent;
 }
+.wrap-triangle{
+    display: inline-block;
+    width: 6px; 
+}
 .show-card{
     background-color: transparent;
     border: none !important;
