--- a/src/component/hub/workspace/editWorkspace/editWorkspace.css
+++ b/src/component/hub/workspace/editWorkspace/editWorkspace.css
@@ -22,10 +22,15 @@
       border:none !important;
 
       /* color: var(--unnamed-color-0a102e); */
-text-align: left;
-font: normal normal medium 16px/21px Roboto;
-letter-spacing: 0.32px;
+      text-align: left;
+      font: normal normal medium 16px/21px Roboto;
+      letter-spacing: 0.32px;
   }
+  /* input[type=date]::-webkit-calendar-picker-indicator {
+    margin: 1px;
+    padding: 1px;
+  } */
+
   .title-view-details{
     color: var(--unnamed-color-34a38b);
     text-align: left;
