--- a/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
+++ b/src/component/hub/project/projectsByWorkspace/projectsByWorkspace.css
@@ -56,6 +56,7 @@ margin-right: 11px;
     margin-right: 10px;
     background: url(../../../img/imge_search.png) no-repeat #54ccb647 ;
     background-position: right;
+    padding-left: 18px;
 
 /* padding-left:30px; */
 
