--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -73,13 +73,17 @@ z-index: 9999 !important;  }
 .task-details .status-btn .save_canges_btn{
     z-index: 99999 !important;
 }
+.select-status{
+    display: inline-block !important;
+}
 .color-status-first{
-    width: 26px;
-height: 10px;
-background: var(--unnamed-color-f13b7f) 0% 0% no-repeat padding-box;
-background: #F13B7F 0% 0% no-repeat padding-box;
-border-radius: 5px;
-opacity: 1;
+    /* display: inline-block !important; */
+  width: 26px;
+  height: 10px;
+/* background: var(--unnamed-color-f13b7f) 0% 0% no-repeat padding-box; */
+  background-color:#F13B7F;
+  border-radius: 5px;
+/* opacity: 1; */
 /* margin-top:1.5vh; */
 /* vertical-align: middle; */
 /* display: inline; */
