--- a/src/component/hub/hub.css
+++ b/src/component/hub/hub.css
@@ -5,7 +5,7 @@ margin-left: 8vh;
 }
 
 .bodyHub {
-    margin-top:24px !important;
+    /* margin-top:24px !important; */
 }
 .back-screen{
     background-color: #E8EAEC !important;
