Bug handling Add Task and update redux tow sides

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,8 @@ text-align: center !important;
 
 }
 .btns-in-view-details-workspace{
-margin-top: 20vh;}
+margin-top: 15vh
+;}
 .btns-in-view-details-project{
   margin-top: 12vh;
 }
