design cards and...

--- a/src/component/hub/SelectHeader/selectHeader.css
+++ b/src/component/hub/SelectHeader/selectHeader.css
@@ -34,7 +34,7 @@ padding-bottom: 0 !important;
 padding-top:0 !important;
 background-attachment: '#00C6EA' !important;
 line-height: 0.95 !important;
-
+text-transform: none !important;
 
 }
 
