--- a/src/component/hub/project/viewProject/viewProject.css
+++ b/src/component/hub/project/viewProject/viewProject.css
@@ -7,7 +7,19 @@
 }
 .nameProjectInList{
    padding-left: 2rem !important;
-   width: 21%;
+   width: 30%;
+}
+
+.name2ProjectInList{
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+    display: -webkit-box;
+    margin-left: 13px !important;
+    margin-top: -23px;
+}
+.widthCellInProject{
+    width: 10%;
 }
 .stripeActionsProject{
     display: inline-block;
